2001-07-10  Bradford Hovinen  <hovinen@ximian.com>

	* default-user.xml: Add sound-properties

	* bonobo-moniker-archiver.c (archiver_resolve): Don't accept
	PropertyBag interface

2001-07-09  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Use
	bonobo_object_unref rather than gtk_object_destroy

	* bonobo-moniker-archiver.c (archiver_resolve): Allow PropertyBag
	interface as well
	(parse_name): Set *location to NULL when there is no location

	* archive.c (archive_load): Use .gnome/capplet-archive rather than
	.gnome/control-center
	(archive_set_current_location): Removed unused variables

	* bonobo-config-archiver.c (bonobo_config_archiver_new): Try to
	load the defaults file if no rollback data can be found

2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* bonobo-config-archiver.[ch]: Use bonobo-conf rather than
	bonobo-config for include path

	* bonobo-moniker-archiver.c (archiver_resolve): Update call to
	Bonobo_ConfigDatabase_addDatabase

	* bonobo-config-archiver.h: Fix include directories

	* Makefile.am (INCLUDES): Update to use pkg-config standards; add
	BONOBO_CFLAGS
	Include configuration moniker-related material
	(SUBDIRS): Remove
	(bin_PROGRAMS): Added ximian-archiver

2001-07-02  Tambet Ingo  <tambet@ximian.com>

	* default-global.xml: Added display-conf backend.

2001-06-22  Bradford Hovinen  <hovinen@ximian.com>

	* archive.c (archive_get_current_location): Return NULL if the
	location id is NULL
	(archive_get_current_location_id): Return NULL if storing the
	snapshot results in an error

	* location.c (location_store): Add return values for error
	conditions; remove g_warning's and g_critical's
	(location_store_full_snapshot): Folded in store_snapshot_cb; don't
	call location_foreach_backend
	(location_store_full_snapshot): Return error condition; 0 on
	success, -1 if any backend failed

2001-06-21  Bradford Hovinen  <hovinen@ximian.com>
